--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "phpstan/phpstan": "^2.1"
     }
 }
